@@ -155,10 +155,10 @@ public class Oid {
      */
     public String toString() {
     
-        StringBuffer sb = new StringBuffer(50);
+        StringBuilder sb = new StringBuilder(50);
     
         if (m_v.size() < 1)
-            return (new String(""));
+            return "";
             
         for (Enumeration e = m_v.elements(); e.hasMoreElements();) {
             sb.append(e.nextElement().toString());
@@ -166,7 +166,7 @@ public class Oid {
                 sb.append(".");
         }
         
-        return (sb.toString());
+        return sb.toString();
     }
 
 
@@ -180,10 +180,10 @@ public class Oid {
      */
     public String toRFC2078String() {
     
-        StringBuffer sb = new StringBuffer(50);
+        StringBuilder sb = new StringBuilder(50);
         
         if (m_v.size() < 1)
-            return (new String(""));
+            return "";
             
         sb.append("{ ");
         for (Enumeration e = m_v.elements(); e.hasMoreElements(); ) {
@@ -192,7 +192,7 @@ public class Oid {
         }
         sb.append("}");
         
-        return (sb.toString());
+        return sb.toString();
     }
     
     
@@ -205,25 +205,25 @@ public class Oid {
     public boolean equals(Object Obj) {
     
         if (! (Obj instanceof Oid))
-            return (false);
+            return false;
 
         //check if both reference the same object
         if (this == Obj)
-            return (true);
+            return true;
 
         Oid anOid = (Oid) Obj;
         
         if (m_v.size() != anOid.m_v.size())
-            return (false);
+            return false;
             
         for (Enumeration e1 = m_v.elements(), e2 = anOid.m_v.elements();
-            e1.hasMoreElements(); ) {
+             e1.hasMoreElements(); ) {
         
             if (! e1.nextElement().equals(e2.nextElement()))
-                return (false);
+                return false;
         }
         
-        return (true);
+        return true;
     }
 
     
@@ -236,10 +236,10 @@ public class Oid {
     public byte[] getDER() throws GSSException {
     
         if (m_der != null)
-            return (m_der);
+            return m_der;
         
         m_der = DERParser.encodeOid(m_v);
-        return (m_der);
+        return m_der;
     }
     
         
@@ -256,10 +256,10 @@ public class Oid {
     
         for (int i = 0; i < oids.length; i++) {
             if (oids[i].equals(this))
-                return (true);
+                return true;
         }
     
-        return (false);
+        return false;
     }
     
     
@@ -280,7 +280,7 @@ public class Oid {
                 
             StringTokenizer st = new StringTokenizer(src, " .");
             while (st.hasMoreTokens()) {
-                m_v.addElement(new Integer(st.nextToken()));
+                m_v.addElement(Integer.valueOf(st.nextToken()));
             }
                 
         } catch (Exception e) {
@@ -290,6 +290,6 @@ public class Oid {
     
     
     //Instance variables
-    private Vector m_v;
+    private final Vector m_v;
     byte [] m_der;
 }
